# smith_normal_form

./: README.md  meson.build  meson_options.txt
.cache/clangd/index/: gtest-all.cc.32EA70DB3AD38E0E.idx  gtest-assertion-result.cc.5D329299868C059A.idx  gtest-assertion-result.h.B44066656C2D8AFC.idx  gtest-death-test-internal.h.F92F464B3C1E79B9.idx  gtest-death-test.cc.4C908F0C14492BB7.idx  gtest-death-test.h.375947C02CDB2868.idx  gtest-filepath.cc.2281376497EB5A71.idx  gtest-filepath.h.9FA73E7BB3CD833C.idx  gtest-internal-inl.h.662B981F79E75DD1.idx  gtest-internal.h.F4ECEE988E1CCACF.idx  gtest-matchers.cc.BCBB1362EFE7E7EE.idx  gtest-matchers.h.259C43468A1083D0.idx  gtest-message.h.44613A30A2E026EC.idx  gtest-param-test.h.9FFD813B498043DA.idx  gtest-param-util.h.9FDD53E7CD63742A.idx  gtest-port-arch.h.184012EA6F8CB310.idx  gtest-port.cc.EA8828B48520949D.idx  gtest-port.h.0D63388468FE52C2.idx  gtest-port.h.0F8740BF394A2C56.idx  gtest-printers.cc.DE344724EAEF5BE6.idx  gtest-printers.h.EA0AB085EA0C9B38.idx  gtest-printers.h.EDFBB96752AF902B.idx  gtest-spi.h.874BA2F098F84DA8.idx  gtest-string.h.C6522F4F41AD24D6.idx  gtest-test-part.cc.745A36E6B2528C9B.idx  gtest-test-part.h.02F05905F7C7D5AF.idx  gtest-type-util.h.F61F473DC0E7790C.idx  gtest-typed-test.cc.4F55451F6D2A998D.idx  gtest-typed-test.h.B8758A19174F27FE.idx  gtest.cc.64EB3DF7E16133E2.idx  gtest.h.69DDF776561EF18C.idx  gtest.h.D9D3BA8C3C79CF62.idx  gtest_pred_impl.h.6F5C0266EDBD6ACB.idx  gtest_prod.h.62089A2BCAA932C0.idx  matrix.hpp.137DABC6CEE0E6BB.idx  matrix.hpp.47105A08B210800A.idx  matrixOperations.cpp.5CBF0B69EA7CE4F3.idx  matrixOperations.hpp.01EF8461701C99AB.idx  matrixOperations.hpp.B1B9806719C62147.idx  printmatrix.cpp.258D25C0902AA9F6.idx  (+10 more)
.github/workflows/: main.yml
include/: matrix.hpp  matrixOperations.hpp  printmatrix.hpp  smithNormalForm.hpp
src/: matrixOperations.cpp  meson.build  printmatrix.cpp  smithNormalForm.cpp
tests/: armatest.cc  inversetest.cc  matrixtest.cc  meson.build  rowadd.cc  snftest.cc  snftest_lli.cc
tests/testdata/: 2x3.mat  3x1.mat  3x2.mat  3x3.mat  3x3_2.mat  3x3_3.mat  4x4.mat  gen_random_invertible.py  invertible_2x2_2.mat  invertible_3x3_10.mat  invertible_3x3_17.mat  invertible_3x3_20.mat  invertible_3x3_5.mat  invertible_4x4_10.mat  invertible_4x4_20.mat  invertible_4x4_30.mat  invertible_5x5_10.mat  invertible_5x5_20.mat
