#option('example',
#  type : 'boolean',
#  value : false,
#  description : 'Here is a sample option'
#)

option('enable-tests',
  type : 'boolean',
  value : true,
  description : 'Enables tests.'
)

option('enable-randomised-tests',
  type : 'boolean',
  value : true,
  description : 'Enables randomisation for tests'
  )

option('enable-benchmarks',
  type : 'boolean',
  value : true,
  description : 'Enables benchmarks.'
)

option('build-armadillo',
  type : 'boolean',
  value : false,
  description : 'Adds a wrapper that translates to armadillo matrices'
  )
