option('enable-tests',
  type : 'boolean',
  value : true,
  description : 'Enables tests.'
)

option('enable-randomised-tests',
  type : 'boolean',
  value : false,
  description : 'Enables randomisation for tests (Not implemented currently)'
  )

option('enable-benchmarks',
  type : 'boolean',
  value : true,
  description : 'Enables benchmarks (Not implemented currently)'
)

